[gd_scene load_steps=4 format=3 uid="uid://dtfxn5caavji6"]

[ext_resource type="Script" uid="uid://dri80pe28ekwb" path="res://gui/simple_track_editor/simple_track_editor.gd" id="1_6576y"]
[ext_resource type="StyleBox" uid="uid://cyvqocfgjh0ll" path="res://gui/background.stylebox" id="2_44g2w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_44g2w"]

[node name="SimpleTrackEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6576y")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_44g2w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LineEditName" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_44g2w")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_44g2w")
theme_override_styles/normal = SubResource("StyleBoxEmpty_44g2w")
flat = true
caret_blink = true

[node name="LabelOrder" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 14

[node name="LabelFind" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 14

[node name="LabelPath" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 14

[node name="TagItems" type="HFlowContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
